// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Enhanced Checkbox Component > Snapshots > matches all sizes snapshot 1`] = `
<div
  data-testid="sizes-container"
>
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
</div>
`;

exports[`Enhanced Checkbox Component > Snapshots > matches all variants snapshot 1`] = `
<div
  data-testid="variants-container"
>
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
    variant="default"
  />
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
    variant="destructive"
  />
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
    variant="outline"
  />
  <button
    aria-checked="false"
    class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
    variant="secondary"
  />
</div>
`;

exports[`Enhanced Checkbox Component > Snapshots > matches default snapshot 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
  data-state="unchecked"
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Enhanced Checkbox Component > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox"
  data-disabled=""
  data-state="unchecked"
  disabled=""
  role="checkbox"
  type="button"
  value="on"
/>
`;

exports[`Enhanced Checkbox Component > Snapshots > matches loading state snapshot 1`] = `
<button
  aria-checked="false"
  class="peer h-4 w-4 shrink-0 rounded-sm border border-primary shadow focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground checkbox checkbox--loading"
  data-disabled=""
  data-state="unchecked"
  disabled=""
  role="checkbox"
  type="button"
  value="on"
/>
`;
